remove resource_setting

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1,6 +1,6 @@
 ru:
   enumerize:
-    resource_setting:
-      type:
+    portfolio:
+      broker:
         finam: Финам
         tinkoff: Тинькофф-инвестиции
